# pymc-prop-kgd-demo

./: README.md  notebook.ipynb  pyproject.toml
