[project]
name = "pymc-prop-kgd-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=1.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymc>=6.1.0",
    "scipy>=1.18.0",
]
